@@ -12,6 +12,8 @@ NOTE : this modified version is still under the Artistic License 2.0
 - Updated bundled LibEventHandler version to 1.3.5 (AddOnVersion: 1305).
 
 [LoreWear]
+- Added a failsafe to prevent deactivating all costume collectibles if costume presets are not yet registered.
+- Changed the internal version of character-specific save data to 2 for the failsafe feature above.
 - Fixed an issue where the player character would not change clothes correctly after recalling out to the same house while swimming in a wetsuit.
 
 Version 1.6.91 : by Calamath
